; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_rmdir_r.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_rmdir_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i32, i32 }

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@GIT_RMDIR_EMPTY_PARENTS = common dso_local global i32 0, align 4
@futils__rmdir_empty_parent = common dso_local global i32 0, align 4
@GIT_ITEROVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_futils_rmdir_r(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %11, i32* %9, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call i64 @git_path_join_unrooted(i32* %9, i8* %12, i8* %13, i32* null)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %59

17:                                               ; preds = %3
  %18 = call i32 @memset(%struct.TYPE_5__* %10, i32 0, i32 16)
  %19 = load i8*, i8** %6, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i8*, i8** %6, align 8
  br label %24

23:                                               ; preds = %17
  br label %24

24:                                               ; preds = %23, %21
  %25 = phi i8* [ %22, %21 ], [ getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), %23 ]
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  store i8* %25, i8** %26, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %29, label %32

29:                                               ; preds = %24
  %30 = load i8*, i8** %6, align 8
  %31 = call i32 @strlen(i8* %30)
  br label %33

32:                                               ; preds = %24
  br label %33

33:                                               ; preds = %32, %29
  %34 = phi i32 [ %31, %29 ], [ 0, %32 ]
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 2
  store i32 %34, i32* %35, align 4
  %36 = load i32, i32* %7, align 4
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  store i32 %36, i32* %37, align 8
  %38 = call i32 @futils__rmdir_recurs_foreach(%struct.TYPE_5__* %10, i32* %9)
  store i32 %38, i32* %8, align 4
  %39 = load i32, i32* %8, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %50, label %41

41:                                               ; preds = %33
  %42 = load i32, i32* %7, align 4
  %43 = load i32, i32* @GIT_RMDIR_EMPTY_PARENTS, align 4
  %44 = and i32 %42, %43
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %46, label %50

46:                                               ; preds = %41
  %47 = load i8*, i8** %6, align 8
  %48 = load i32, i32* @futils__rmdir_empty_parent, align 4
  %49 = call i32 @git_path_walk_up(i32* %9, i8* %47, i32 %48, %struct.TYPE_5__* %10)
  store i32 %49, i32* %8, align 4
  br label %50

50:                                               ; preds = %46, %41, %33
  %51 = load i32, i32* %8, align 4
  %52 = load i32, i32* @GIT_ITEROVER, align 4
  %53 = icmp eq i32 %51, %52
  br i1 %53, label %54, label %56

54:                                               ; preds = %50
  %55 = call i32 (...) @git_error_clear()
  store i32 0, i32* %8, align 4
  br label %56

56:                                               ; preds = %54, %50
  %57 = call i32 @git_buf_dispose(i32* %9)
  %58 = load i32, i32* %8, align 4
  store i32 %58, i32* %4, align 4
  br label %59

59:                                               ; preds = %56, %16
  %60 = load i32, i32* %4, align 4
  ret i32 %60
}

declare dso_local i64 @git_path_join_unrooted(i32*, i8*, i8*, i32*) #1

declare dso_local i32 @memset(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @futils__rmdir_recurs_foreach(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @git_path_walk_up(i32*, i8*, i32, %struct.TYPE_5__*) #1

declare dso_local i32 @git_error_clear(...) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
